--- a/PG2/Entrega_oral_2/Avance.qmd
+++ b/PG2/Entrega_oral_2/Avance.qmd
@@ -102,22 +102,89 @@ for (i in 1:nrow(encuesta)) {
 }
 ```
 
-Escoger una muestra de 100 programadores (con reemplazo) y contar el número de programadores que solo programen en JavaScript / APL.
+`E1` Escoger una muestra de 100 programadores (con reemplazo) y contar el número de programadores que programen en JavaScript y que ganen mas del promedio.
 
-Evento 1: Programan en JS y ganan mas que el promedio
+Éxito: Que el programador escogido domine en JS y gane mas que el promedio
+
+Calculamos la probabilidad de éxito asumiendo que nuestra muestra es representativa.
 
 ```{r}
-p <- nrow(encuesta %>% filter(encuesta$JavaScript == TRUE & encuesta$Salary > promedio))/nrow(encuesta)
+p <- round( nrow(encuesta %>% filter(encuesta$JavaScript == TRUE & encuesta$Salary > promedio))/nrow(encuesta) ,2)
 p
 ```
-
-Asignamos el número de ensayos independientes a la variable n.
-
 ```{r}
 n <- 100
 ```
 
-Hicimos un gráfico y lo dividimos en un rango de 0 a 100, podemos observar que el pico se encuentra en 26-27 éxitos, lo cual coincide aproximadamente con nuestra probabilidad máxima, calculada anteriormente (0.268).
+
+
+
+$$ 
+X : \text{Número de programadores que solo programen en JavaScript y ganan mas que el promedio en una muestra de 100 programadores} \\
+
+\text{Rango(X) = 0 ,1 ,2 ,3 ,4 ,5 ,6 ,7 ........,100} \\
+
+X - Bin(n,p) = Bin(100,0.32)
+
+
+$$
+
+```{r}
+plot(0:100, dbinom(0:100, n, p), type = 'h', lwd = 2, xlab = "Número de éxitos", ylab = "Probabilidad", main = "Distribución Binomial")
+```
+
+## Valor Esperado
+
+$$ 
+\text{Para una binomial: }   \mathbb{E}(X) =  np 
+$$
+
+
+```{r}
+media <- n*p
+media
+```
+
+Ahora calculamos la esperanza con la sumatoria:
+
+$$
+\mathbb{E}(X) = \sum xp(x)
+$$
+
+```{r}
+Ex <-sum(0:100*dbinom(0:100 , n , p))
+
+
+Ex
+```
+
+
+
+Varianza:
+
+$$
+Var(X) = np(1-p)
+$$
+
+```{r}
+varianza <- n*p*(1-p)
+varianza
+```
+
+
+$$
+Var(X) = \sum_{x \text{ } \in Ran(X)}(x-E(X))^{2}p(x)
+$$
+
+```{r}
+sum((0:100 - Ex)^{2}*dbinom(0:100 , n ,p))
+```
+Ejemplo: 
+
+
+
+
+Hicimos un gráfico y lo dividimos en un rango de 0 a 100, podemos observar que el pico se encuentra en 32 éxitos, lo cual coincide aproximadamente con nuestra probabilidad máxima, calculada anteriormente (0.32).
 
 ```{r}
 rango <- 0:100
@@ -159,3 +226,100 @@ var
 ```
 
 Explicar
+
+
+
+### Hipergeometrica
+
+## Variable `TotalLenguajes` 
+
+
+1) Población
+
+```{r}
+nrow(encuesta)
+```
+
+2) Número de éxitos
+```{r}
+nrow(encuesta %>% filter(TotalLenguages >= 6))
+```
+
+
+`E2`: De una población de `29204` programadores, donde `10492` dominan de 6 lenguajes a más . Se escogerá una muestra de `15000` programadores y se contara el número de programadores que dominan de 6 lenguajes a más.
+
+```{r}
+N <- 29204 #población
+n <- 15000 #muestra
+k <- 10492 #éxitos
+```
+
+
+
+$$
+Y : \text{Número de programadores que usan de 6 a más lenguajes de programación } \\
+\text{de una muestra de 15000 de una poblacion de 29204 donde 10492 cumplen la condicion}
+$$
+
+$$
+Y - H(N,n,k) = H(29204 , 15000 , 10492) \\
+Rang(Y) = 0,1,2,3,......,10492
+$$
+```{r}
+plot(5000:5900, dhyper(5000:5900, k , N-k , n), type = 'h', lwd = 2, xlab = "Número de éxitos", ylab = "Probabilidad", main = "Distribución Hipergeometrica")
+```
+1) Esperanza
+
+$$
+   E(Y) = n\frac{k}{N}
+$$
+```{r}
+media <- (n*k)/N
+media
+```
+
+$$\text{Tambien se puede calcular : } \mathbb{E}(Y) = \sum_{y \text{ } \in \text{} Ran(Y) } yp(y) $$
+
+
+```{r}
+Ex <- sum(0:10492*dhyper(0:10492 , k , N-k , n))
+Ex
+```
+2) Varianza
+
+$$
+\text{Var}(Y) = \frac{n \cdot k \cdot (N - k) \cdot (N - n)}{N^2 \cdot (N - 1)}
+
+$$
+
+
+```{r}
+varianza <- (n*k*(N-k)*(N-n))/(N*N*(N-1))
+varianza
+```
+
+$$
+Var(Y) = \sum_{y \text{ } \in \text{ } Ran(Y)}(y-E(y))^{2}p(y)
+$$
+
+```{r}
+Varx <-sum( ((0:10492 - Ex)^2)*dhyper(0:10492,k,N-k , n))
+Varx
+```
+
+Ejemplo
+
+
+
+## Continuas
+
+
+
+
+
+
+
+
+
+
+
