--- a/PG2/Entrega_oral_1/Jeff.qmd
+++ b/PG2/Entrega_oral_1/Jeff.qmd
@@ -96,6 +96,11 @@ probTotalLenguajes$ProbabilidadAtomica <- probTotalLenguajes$Frecuencia / nrow(e
 probTotalLenguajes
 ```
 
+
+```{r}
+sum(probTotalLenguajes$ProbabilidadAtomica)
+```
+
 ### Función de masa de probabilidad
 
 ```{r}
