--- a/PG2/Entrega_oral_2/distribuciones_test.qmd
+++ b/PG2/Entrega_oral_2/distribuciones_test.qmd
@@ -89,3 +89,12 @@ segmento
 ```{r}
 hist(segmento$Salary)
 ```
+
+```{r}
+encuesta$salariontSobrecaLenguajes = encuesta$Salary/encuesta$TotalLenguages
+FDL <- fitdist(encuesta$salarioSobrecantLenguajes, "logis")
+plot(FDL, pch = ".", col = "blue")
+```
+
+```{}
+```
