--- a/PG2/Entrega_oral_2/distribuciones_test.qmd
+++ b/PG2/Entrega_oral_2/distribuciones_test.qmd
@@ -48,12 +48,9 @@ descdist(encuesta$Salary, boot = 5000)
 FDG <- fitdist(encuesta$Salary, "gamma", start = list(shape = 1, scale = 2))
 ```
 
-
 ```{r}
 plot(FDG, pch = ".", col = "blue")
 ```
-
-
 
 ```{r}
 hist(encuesta$Salary, prob = TRUE)
@@ -63,22 +60,18 @@ lines(Xs, dgamma(Xs, shape = 1.847037, scale = 41656.428380), col = "red")
 
 Con esta libreria vamos a evaluar que variables nossirve
 
-PASO 1) Definir que distribución utilizaremos
-#### *Distribución Binomial*
+PASO 1) Definir que distribución utilizaremos \#### *Distribución Binomial*
 
 paso2) Construir la variable aleatoria
 
-$X: Número\ de\ empresas\ que\ tienen\ 1\ registro$
-paso3) Identificar los parámetros
+$X: Número\ de\ empresas\ que\ tienen\ 1\ registro$ paso3) Identificar los parámetros
 
-P(E)= LA probabilidad de éxito 
-n= número de empresas elegidad al azar 
+P(E)= LA probabilidad de éxito n= número de empresas elegidad al azar
 
 ```{r}
 library()
 ```
 
-- Distribucion Bernoulli 
+-   Distribucion Bernoulli
 
-
-- Ditribucion Binomial
+-   Ditribucion Binomial
