--- a/PG2/Entrega_oral_2/TotalLenguajesPoisson.Rmd
+++ b/PG2/Entrega_oral_2/TotalLenguajesPoisson.Rmd
@@ -9,17 +9,17 @@ probTotalLenguajes
 ```
 
 ```{r}
-plot(probTotalLenguajes$TotalLenguages, 
+plot(probTotalLenguajes$TotalLenguajes, 
      probTotalLenguajes$ProbabilidadAtomica, 
      type = "h", 
      col="red",
-     main = "Función de masa de probabilidad",
+     main = "Comparación de la variable 'Total de lenguajes' y Poisson",
      xlab = "Cantidad de lenguajes usados",
      ylab = "Probabilidad",
      ylim = c(0,0.2)
 )
 
-points(probTotalLenguajes$TotalLenguages, 
+points(probTotalLenguajes$TotalLenguajes, 
      probTotalLenguajes$ProbabilidadAtomica,  
      pch = 20, 
      col="red",
@@ -27,6 +27,12 @@ points(probTotalLenguajes$TotalLenguages,
 
 lines(dpois(1:50, mean(encuesta$TotalLenguajes)), col="blue", type="l", lwd = 2, lty = 2)
 
+legend("topright", 
+       legend = c("Función de probabilidad", "Distribución de Poisson"), 
+       col = c("red", "blue"), 
+       lwd = 2,
+       lty = c(1,2)
+)
 ```
 
 Media 
