--- a/PG2/Entrega_oral_2/TotalLenguajesPoisson.Rmd
+++ b/PG2/Entrega_oral_2/TotalLenguajesPoisson.Rmd
@@ -4,12 +4,18 @@ author: "Jeff"
 date: "`r Sys.Date()`"
 output: html_document
 ---
+
 ```{r}
+encuesta %>% group_by(TotalLenguajes) %>% count() -> probTotalLenguajes
+probTotalLenguajes %>% rename(Frecuencia = n) -> probTotalLenguajes
+
+probTotalLenguajes$ProbabilidadAtomica <- probTotalLenguajes$Frecuencia / nrow(encuesta)
+
 probTotalLenguajes
 ```
 
 ```{r}
-plot(probTotalLenguajes$TotalLenguages, 
+plot(probTotalLenguajes$TotalLenguajes, 
      probTotalLenguajes$ProbabilidadAtomica, 
      type = "h", 
      col="red",
@@ -19,7 +25,7 @@ plot(probTotalLenguajes$TotalLenguages,
      ylim = c(0,0.2)
 )
 
-points(probTotalLenguajes$TotalLenguages, 
+points(probTotalLenguajes$TotalLenguajes, 
      probTotalLenguajes$ProbabilidadAtomica,  
      pch = 20, 
      col="red",
@@ -29,10 +35,9 @@ lines(dpois(1:50, mean(encuesta$TotalLenguajes)), col="blue", type="l", lwd = 2,
 
 ```
 
-Media 
+Media
+
 ```{r}
 mean(encuesta$TotalLenguajes)
 median(encuesta$TotalLenguajes)
 ```
-
-
